// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cypress Generator should render empty test correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testSuite"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue=""
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testDescription"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue=""
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a description for your test
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Code
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Events
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Headers
      </span>
    </label>
    <label
      className="jjsX8_eNFDgBVwmCs_Bv"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="D9xOGb0Smbed_MdnEz_h"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="_Cf6_6UlOEa0xDl2PbX6 textArea"
  >
    <div
      className="qmkSeklt9AUFgqAjf2iJ"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="e6yI3SPkg4DqRDW3zTKp"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO DJsXPedUeH_GYbWEWQ08"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO"
      />
    </div>
  </div>
</div>
`;

exports[`Cypress Generator should render events correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testSuite"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue=""
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testDescription"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue=""
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a description for your test
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Code
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Events
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Headers
      </span>
    </label>
    <label
      className="jjsX8_eNFDgBVwmCs_Bv"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="D9xOGb0Smbed_MdnEz_h"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="_Cf6_6UlOEa0xDl2PbX6 textArea"
  >
    <div
      className="qmkSeklt9AUFgqAjf2iJ"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  beforeEach(() => {
    cy.visit('http://willemliu.nl');
    cy.clearCookies();
    cy.reload(true);
  });

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
    cy.viewport(320, 240);
    cy.visit('http://willemliu.nl');
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="e6yI3SPkg4DqRDW3zTKp"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO DJsXPedUeH_GYbWEWQ08"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO"
      />
    </div>
  </div>
</div>
`;

exports[`Cypress Generator should render headers correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testSuite"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue=""
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testDescription"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue=""
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a description for your test
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Code
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Events
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Headers
      </span>
    </label>
    <label
      className="jjsX8_eNFDgBVwmCs_Bv"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="D9xOGb0Smbed_MdnEz_h"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="_Cf6_6UlOEa0xDl2PbX6 textArea"
  >
    <div
      className="qmkSeklt9AUFgqAjf2iJ"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  beforeEach(() => {
    cy.visit('http://willemliu.nl');
    cy.clearCookies();
    cy.reload(true);
  });

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
    cy.viewport(320, 240);
    cy.visit('http://willemliu.nl', {headers: {\\"Content-type\\": \\"application/json\\", \\"x-platform\\": \\"Android\\"}});
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="e6yI3SPkg4DqRDW3zTKp"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO DJsXPedUeH_GYbWEWQ08"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO"
      />
    </div>
  </div>
</div>
`;

exports[`Cypress Generator should render test with suite name and description correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testSuite"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue="Test suite name"
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value="Test suite name"
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="GKKRoDa3ZmDl3Ba6z_8a testDescription"
  >
    <div
      className="n_TEH7ulnXJksU32jbQ7"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue="Test description"
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value="Test description"
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="NC6NSkYeZUDX_BS1nJQC"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S ___sS2lS2z9n6DiCdyqU"
      >
        Please enter a description for your test
      </div>
      <div
        className="_WcbkpsD4_xgcmng0e3S"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Code
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Events
      </span>
    </label>
    <label
      className="AZw_6I1jvaBT1ig8_g35"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_mftckuWm_CxbUi4VQTL"
      >
        Headers
      </span>
    </label>
    <label
      className="jjsX8_eNFDgBVwmCs_Bv"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="D9xOGb0Smbed_MdnEz_h"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="_Cf6_6UlOEa0xDl2PbX6 textArea"
  >
    <div
      className="qmkSeklt9AUFgqAjf2iJ"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test suite name', () => {
  

  afterEach(() => {
    cy.clearCookies();
  });

  it('Test description', () => {
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="e6yI3SPkg4DqRDW3zTKp"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565Z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO DJsXPedUeH_GYbWEWQ08"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_Ep_tl05BdWdA14JbUGO"
      />
    </div>
  </div>
</div>
`;
